force-app/main/default/objects/ICONSettings__c/ICONSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ICON_Settings</label>
</CustomObject>