force-app/main/default/objects/ICONSettings__c/fields/AccLastContactTimeRange__c.field-meta.xml
<CustomField>
    <fullName>AccLastContactTimeRange__c</fullName>
    <description>Defines the time range (in days) studied to display the &quot;Contacted in last X days&quot; in ICON Mobile (+ Batch)</description>
    <label>Account Last Contact Time Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>