force-app/main/default/objects/ICONSettings__c/fields/accountPurgeLimit__c.field-meta.xml
<CustomField>
    <fullName>accountPurgeLimit__c</fullName>
    <description>number of mounth to purg account</description>
    <label>accountPurgeLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>