force-app/main/default/objects/ICONSettings__c/fields/AnniversaryScheduledDays__c.field-meta.xml
<CustomField>
    <fullName>AnniversaryScheduledDays__c</fullName>
    <description>Anniversary Scheduled Days</description>
    <label>Anniversary Scheduled Days</label>
    <length>50</length>
    <type>Text</type>
</CustomField>