force-app/main/default/objects/ICONSettings__c/fields/batchAnniversaryScope__c.field-meta.xml
<CustomField>
    <fullName>batchAnniversaryScope__c</fullName>
    <label>Batch Anniversary Scope</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>