force-app/main/default/objects/ICONSettings__c/fields/batchAnonymizationScope__c.field-meta.xml
<CustomField>
    <fullName>batchAnonymizationScope__c</fullName>
    <label>Batch Anonymization Scope</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>