force-app/main/default/objects/ICONSettings__c/fields/batchBirthdayReminderScope__c.field-meta.xml
<CustomField>
    <fullName>batchBirthdayReminderScope__c</fullName>
    <label>Batch Birthday Reminder Scope</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>