force-app/main/default/objects/ICONSettings__c/fields/BirthdateScheduledDays__c.field-meta.xml
<CustomField>
    <fullName>BirthdateScheduledDays__c</fullName>
    <description>Birthdate Scheduled Days</description>
    <label>Birthdate Scheduled Days</label>
    <length>50</length>
    <type>Text</type>
</CustomField>