force-app/main/default/objects/ICONSettings__c/fields/Check_IpAddress__c.field-meta.xml
<CustomField>
    <fullName>Check_IpAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Ip Address</label>
    <type>Checkbox</type>
</CustomField>