force-app/main/default/objects/ICONSettings__c/fields/ClientAnonymizationDaysLimit__c.field-meta.xml
<CustomField>
    <fullName>ClientAnonymizationDaysLimit__c</fullName>
    <label>Client Anonymization Days Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>