force-app/main/default/objects/ICONSettings__c/fields/ClientAnonymizationLimit__c.field-meta.xml
<CustomField>
    <fullName>ClientAnonymizationLimit__c</fullName>
    <label>Client Anonymization Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>