force-app/main/default/objects/ICONSettings__c/fields/ClientAnonymizationSuffixe__c.field-meta.xml
<CustomField>
    <fullName>ClientAnonymizationSuffixe__c</fullName>
    <description>Added to the user name. Depends on the environment PRD for production</description>
    <label>Client Anonymization Suffixe</label>
    <length>10</length>
    <type>Text</type>
</CustomField>