force-app/main/default/objects/ICONSettings__c/fields/clientMergeLimit__c.field-meta.xml
<CustomField>
    <fullName>clientMergeLimit__c</fullName>
    <label>Client Merge Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>