force-app/main/default/objects/ICONSettings__c/fields/Completed_Picklist_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Completed_Picklist_Statuses__c</fullName>
    <defaultValue>&quot;Completed,Done&quot;</defaultValue>
    <description>Comma separated list of completed picklist statuses</description>
    <label>Completed Picklist Statuses</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>