force-app/main/default/objects/ICONSettings__c/fields/CountryWhereDisplayName2__c.field-meta.xml
<CustomField>
    <fullName>CountryWhereDisplayName2__c</fullName>
    <description>This Field Contains the Countries Where we have to Display LastName and First Name in Kana</description>
    <label>CountryWhereDisplayName2</label>
    <type>TextArea</type>
</CustomField>