force-app/main/default/objects/ICONSettings__c/fields/Default_ShowAs__c.field-meta.xml
<CustomField>
    <fullName>Default_ShowAs__c</fullName>
    <defaultValue>&quot;Busy&quot;</defaultValue>
    <description>Default value for Show As field  when we create new Event</description>
    <label>Default_ShowAs</label>
    <length>25</length>
    <type>Text</type>
</CustomField>