force-app/main/default/objects/ICONSettings__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <defaultValue>&quot;na15.salesforce.com&quot;</defaultValue>
    <label>Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>