force-app/main/default/objects/ICONSettings__c/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <defaultValue>&quot;@icon.vuitton.com&quot;</defaultValue>
    <label>Email Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>