force-app/main/default/objects/ICONSettings__c/fields/ExcepPurchaseFrequence__c.field-meta.xml
<CustomField>
    <fullName>ExcepPurchaseFrequence__c</fullName>
    <label>Exceptional Purchase Frequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>