force-app/main/default/objects/ICONSettings__c/fields/ExcepPurchaseUSD__c.field-meta.xml
<CustomField>
    <fullName>ExcepPurchaseUSD__c</fullName>
    <defaultValue>3500</defaultValue>
    <label>Exceptional Purchase Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>