force-app/main/default/objects/ICONSettings__c/fields/Exceptional_Purchase_Currency__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Purchase_Currency__c</fullName>
    <defaultValue>&quot;EUR&quot;</defaultValue>
    <label>Exceptional Purchase Currency</label>
    <length>4</length>
    <type>Text</type>
</CustomField>