force-app/main/default/objects/ICONSettings__c/fields/Link_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Link_Calendar__c</fullName>
    <defaultValue>&quot;IC_Calendar&quot;</defaultValue>
    <description>Name of the Calendar apex page</description>
    <label>Link_Calendar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>