force-app/main/default/objects/ICONSettings__c/fields/Link_ClientDetails__c.field-meta.xml
<CustomField>
    <fullName>Link_ClientDetails__c</fullName>
    <defaultValue>&quot;IC_ClientDetails&quot;</defaultValue>
    <label>Client Details Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>