force-app/main/default/objects/ICONSettings__c/fields/Link_ClientSearch__c.field-meta.xml
<CustomField>
    <fullName>Link_ClientSearch__c</fullName>
    <defaultValue>&quot;IC_SearchClient&quot;</defaultValue>
    <label>Client Search Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>