force-app/main/default/objects/ICONSettings__c/fields/Link_EventDetails__c.field-meta.xml
<CustomField>
    <fullName>Link_EventDetails__c</fullName>
    <defaultValue>&quot;IC_EventDetails&quot;</defaultValue>
    <label>Event Details</label>
    <length>25</length>
    <type>Text</type>
</CustomField>