force-app/main/default/objects/ICONSettings__c/fields/Link_MyBirthdayClients__c.field-meta.xml
<CustomField>
    <fullName>Link_MyBirthdayClients__c</fullName>
    <label>My Birthday Clients link</label>
    <length>40</length>
    <type>Text</type>
</CustomField>