force-app/main/default/objects/ICONSettings__c/fields/Link_MyCLientLists__c.field-meta.xml
<CustomField>
    <fullName>Link_MyCLientLists__c</fullName>
    <defaultValue>&quot;IC_MyCLientLists&quot;</defaultValue>
    <description>MyCLientLists</description>
    <label>My CLient Lists</label>
    <type>TextArea</type>
</CustomField>