force-app/main/default/objects/ICONSettings__c/fields/Link_MyEvents__c.field-meta.xml
<CustomField>
    <fullName>Link_MyEvents__c</fullName>
    <defaultValue>&quot;IC_MyEvents&quot;</defaultValue>
    <label>My Event Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>