force-app/main/default/objects/ICONSettings__c/fields/Link_MyRecentClients__c.field-meta.xml
<CustomField>
    <fullName>Link_MyRecentClients__c</fullName>
    <defaultValue>&quot;IC_MyRecentClients&quot;</defaultValue>
    <label>My Recent Clients Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>