force-app/main/default/objects/ICONSettings__c/fields/Link_MyStoreTopClients__c.field-meta.xml
<CustomField>
    <fullName>Link_MyStoreTopClients__c</fullName>
    <defaultValue>&quot;IC_MyStoreTopClients&quot;</defaultValue>
    <label>My Store Top Clients Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>