force-app/main/default/objects/ICONSettings__c/fields/Link_MyToDo__c.field-meta.xml
<CustomField>
    <fullName>Link_MyToDo__c</fullName>
    <defaultValue>&quot;IC_MyTasks&quot;</defaultValue>
    <label>My To Do Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>