force-app/main/default/objects/ICONSettings__c/fields/Link_MyTopClients__c.field-meta.xml
<CustomField>
    <fullName>Link_MyTopClients__c</fullName>
    <defaultValue>&quot;IC_MyTopClients&quot;</defaultValue>
    <label>My Top Clients Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>