force-app/main/default/objects/ICONSettings__c/fields/Link_MyVoiceClients__c.field-meta.xml
<CustomField>
    <fullName>Link_MyVoiceClients__c</fullName>
    <label>My Voice Clients link</label>
    <length>40</length>
    <type>Text</type>
</CustomField>