force-app/main/default/objects/ICONSettings__c/fields/Link_TaskDetails__c.field-meta.xml
<CustomField>
    <fullName>Link_TaskDetails__c</fullName>
    <defaultValue>&quot;IC_TaskDetails&quot;</defaultValue>
    <label>Task Details</label>
    <length>25</length>
    <type>Text</type>
</CustomField>