force-app/main/default/objects/ICONSettings__c/fields/Login_Page__c.field-meta.xml
<CustomField>
    <fullName>Login_Page__c</fullName>
    <defaultValue>&quot;https://icon-louisvuitton.secure.force.com/login&quot;</defaultValue>
    <label>Login Page</label>
    <length>100</length>
    <type>Text</type>
</CustomField>