force-app/main/default/objects/ICONSettings__c/fields/NewRelic__c.field-meta.xml
<CustomField>
    <fullName>NewRelic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Integrate New Relic Tool</description>
    <inlineHelpText>Integrate New Relic Tool</inlineHelpText>
    <label>NewRelic</label>
    <type>Checkbox</type>
</CustomField>