force-app/main/default/objects/ICONSettings__c/fields/OnlineApptRT__c.field-meta.xml
<CustomField>
    <fullName>OnlineApptRT__c</fullName>
    <description>Record type of Online Appointment</description>
    <label>OnlineApptRT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>