force-app/main/default/objects/ICONSettings__c/fields/Param_DeleteTransaction_batch__c.field-meta.xml
<CustomField>
    <fullName>Param_DeleteTransaction_batch__c</fullName>
    <label>Param_DeleteTransaction_batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>