force-app/main/default/objects/ICONSettings__c/fields/ProspectClientPurge__c.field-meta.xml
<CustomField>
    <fullName>ProspectClientPurge__c</fullName>
    <defaultValue>2</defaultValue>
    <description>This field is used to determine the elements to purge.
0 : for Prospects
1 : for Clients
2 ; for Clients and Prospect</description>
    <label>Prospect Client Purge</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>