force-app/main/default/objects/ICONSettings__c/fields/Session_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Session_Timeout__c</fullName>
    <defaultValue>14000</defaultValue>
    <label>Session Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>