force-app/main/default/objects/ICONSettings__c/fields/ShowWeChat__c.field-meta.xml
<CustomField>
    <fullName>ShowWeChat__c</fullName>
    <description>This Field Contains the Countries Where we have to Display Wwe Chat icon</description>
    <label>Show We Chat</label>
    <type>TextArea</type>
</CustomField>