force-app/main/default/objects/ICONSettings__c/fields/SiteDomain__c.field-meta.xml
<CustomField>
    <fullName>SiteDomain__c</fullName>
    <description>The ICON site domain name</description>
    <inlineHelpText>The ICON site domain name</inlineHelpText>
    <label>SiteDomain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>