force-app/main/default/objects/ICONSettings__c/fields/Targeted_Clients_Lists_Nb_Rows__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Clients_Lists_Nb_Rows__c</fullName>
    <label>Targeted Clients Lists Nb Rows</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>