force-app/main/default/objects/ICONSettings__c/fields/Targeted_Clients_Lists_PaginationSize__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Clients_Lists_PaginationSize__c</fullName>
    <label>Targeted Clients Lists PaginationSize</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>