force-app/main/default/objects/ICONSettings__c/fields/taskPurgeMaxLimit__c.field-meta.xml
<CustomField>
    <fullName>taskPurgeMaxLimit__c</fullName>
    <description>Task purge maximum limit. for exemple One (6) Months</description>
    <label>task Purge Max Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>