force-app/main/default/objects/ICONSettings__c/fields/taskPurgeMinLimit__c.field-meta.xml
<CustomField>
    <fullName>taskPurgeMinLimit__c</fullName>
    <description>Task purge minimum limit. for exemple One (1) Months</description>
    <label>task Purge Min Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>