force-app/main/default/objects/ICONSettings__c/fields/Technical_User__c.field-meta.xml
<CustomField>
    <fullName>Technical_User__c</fullName>
    <defaultValue>&apos;005f0000004JDcPAAW&apos;</defaultValue>
    <label>Technical User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>