force-app/main/default/objects/ICONSettings__c/fields/useOneData__c.field-meta.xml
<CustomField>
    <fullName>useOneData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>useOneData</label>
    <type>Checkbox</type>
</CustomField>