force-app/main/default/objects/ICONSettings__c/fields/VFDomain__c.field-meta.xml
<CustomField>
    <fullName>VFDomain__c</fullName>
    <description>The ICON site visualforce domain name</description>
    <inlineHelpText>The ICON site visualforce domain name</inlineHelpText>
    <label>VFDomain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>